<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/searchTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title_media"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/search_options" />

    <LinearLayout
        android:id="@+id/searchOptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/minValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:inputType="numberSigned"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/maxValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:inputType="numberSigned"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed600"
            android:gravity="center"
            android:text="@string/error"/>
    </LinearLayout>
</LinearLayout>