<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight50"
    android:scrollbars="vertical"
    tools:context=".AbstractPropertyEditionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/property_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_property" />

                <Spinner
                    android:id="@+id/propertyTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:entries="@array/empty_list"
                    android:spinnerMode="dropdown" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:boxBackgroundMode="filled"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:hint="@string/title_description"
                        android:inputType="textMultiLine|textCapSentences"
                        android:maxLines="6"
                        android:minLines="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.openclassrooms.realestatemanager.views.InterestPointsAddingView
                    android:id="@+id/interestPointsAddingView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/surfaceEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_surface_black_24dp"
                            android:drawablePadding="16dp"
                            android:paddingRight="80dp"
                            android:paddingEnd="80dp"
                            android:hint="@string/surface"
                            android:inputType="numberSigned"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/measure_sq_m"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberOfRoomsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_home_black_24dp"
                        android:drawablePadding="16dp"
                        android:hint="@string/number_of_rooms"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberOfBathroomsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/hot_tub_black_24x24"
                        android:drawablePadding="16dp"
                        android:hint="@string/number_of_bathrooms"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberOfBedroomsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/hotel_black_24x24"
                        android:drawablePadding="16dp"
                        android:hint="@string/number_of_bedrooms"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/priceEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_money_cash_black_24dp"
                            android:drawablePadding="16dp"
                            android:hint="@string/price"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_attach_money_black_24dp"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/united_states"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_york"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressLine1EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_line"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressLine2EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_line2"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/postalCodeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postal_code"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/invalidAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/invalid_address"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/staticMapImageView"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.openclassrooms.realestatemanager.views.MediaBoxView
            android:id="@+id/mediaBoxView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCreateProperty"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/create"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="16dp"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnEditProperty"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_modifications"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="16dp"
            android:textAllCaps="true" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>